# LabMidi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  premake4.lua
LabMuse/: imuse-technical.md
assets/: venture.txt
cmake/: LabMidiConfig.cmake.in  LabMidiTargets.cmake.in
examples/: Echo.cpp  MidiApp.cpp  MidiApp.h  MidiPlayerApp.cpp  MidiPortsApp.cpp  MidiPortsApp.h  OptionParser.cpp
include/LabMidi/: Command.h  Event.h  In.h  LabMidi.h  LabMidiIn.h  LabMidiPorts.h  LabMidiSoftSynth.h  LabMidiSongPlayer.h  LabMidiUtil.h  MidiFile.h  MidiFilePlayer.h  MidiInOut.h  Out.h  Ports.h  SoftSynth.h  Song.h  SongPlayer.h
osx/: Prefix.pch
src/: LabMidiCommand.cpp  LabMidiEvent.cpp  LabMidiIn.cpp  LabMidiMusicTheory.cpp  LabMidiOut.cpp  LabMidiPorts.cpp  LabMidiSoftSynth.cpp  LabMidiSong.cpp  LabMidiSongPlayer.cpp  LabMidiUtil.cpp  MidiApp.cpp  MidiPlayerApp.cpp  MidiPlayerApp.h  MidiPortsApp.cpp  OptionParser.cpp  premake4.lua
src/LabMidi/: LabMidiCommand.cpp  LabMidiCommand.h  LabMidiEvent.cpp  LabMidiEvent.h  LabMidiIn.cpp  LabMidiIn.h  LabMidiMusicTheory.cpp  LabMidiMusicTheory.h  LabMidiOut.cpp  LabMidiOut.h  LabMidiPorts.cpp  LabMidiSoftSynth.cpp  LabMidiSoftSynth.h  LabMidiSong.cpp  LabMidiSong.h  LabMidiSongPlayer.cpp  LabMidiSongPlayer.h  LabMidiUtil.cpp  LabMidiUtil.h
src/LabMidi.xcodeproj/: project.pbxproj
src/LabMidi.xcodeproj/xcuserdata/dp.xcuserdatad/xcschemes/: LabMidi.xcscheme  xcschememanagement.plist
